[package]
name = "milito-rust"
version = "0.1.0"
authors = ["Oleg Bask <obask@users.noreply.github.com>"]
edition = "2018"

[dependencies]
hyper = { version = "0.14", features = ["http1", "server", "tcp"] }
tokio = { version = "1.20", features = ["full"] }
url = "2.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
